corrected small code erroe where it was stretching out the username and password box

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -9,11 +9,6 @@
     display: flex;
 }
 
-.flex-col {
-	display: flex;
-	flex-direction: column;
-}
-
 .justify-between {
 	justify-content: space-between;
 }
@@ -56,8 +51,6 @@
     color: #3555f1;
 }
 
-/* Dog image */
-
 /* General */
 
 .dog-image {
@@ -77,7 +70,7 @@
 
 #register {
     width: auto;
-    height: 5.67vw;
+    height: 5.8vw;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -115,3 +108,20 @@ a:hover {
 	min-height: 100%;
 }
 
+/* Pagination */
+
+.pagination-page-info {
+    padding: .6em;
+    padding-left: 0;
+    width: 40em;
+    margin: .5em;
+    margin-left: 0;
+    font-size: 12px;
+}
+.pagination-page-info b {
+    color: black;
+    background: #6aa6ed;
+    padding-left: 2px;
+    padding: .1em .25em;
+    font-size: 150%;
+}
